begin work on discrete examples...

--- a/example_continuous_SI.ipynb
+++ b/example_continuous_SI.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:d430abd0efee5af382e544fe4413c94de6701dba712f060ebee93ccb7d61dfa6"
+  "signature": "sha256:f00810ac075dd8c64133aa930c8aae1eadf0fee620c9467dca7ff5256f14b405"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -306,7 +306,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Generate a population from a bi-variate normal distribution..."
+      "Generate a population with a bivariate uniform spatial distribution (over a 25 by 25 unit area)"
      ]
     },
     {
@@ -362,7 +362,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Generate the initial infection and propagate infection through population (SI model) in continuous time with parameters $\\alpha=2 and \\beta=6$"
+      "Generate the initial infection and propagate infection through population (SI model) in continuous time with parameters $\\alpha=2$ and $\\beta=6$"
      ]
     },
     {
