update si inference example

--- a/example_continuous_SI_inference.ipynb
+++ b/example_continuous_SI_inference.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:b3f20d424ad6cf2f9a863658c799bcb849ca6987f125a4a317b1df9d8f58ff96"
+  "signature": "sha256:7d9f36a8d1cf0f1a71d43d206712f8ec94bbdc1ed043d856e11fb50019881a66"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -320,39 +320,39 @@
      "outputs": [
       {
        "html": [
-        "<table class=\"data-frame\"><tr><th></th><th>ind_id</th><th>x</th><th>y</th></tr><tr><th>1</th><td>1</td><td>1.6694149981122375</td><td>0.5086703009226312</td></tr><tr><th>2</th><td>2</td><td>0.253062872851455</td><td>9.656329076086292</td></tr><tr><th>3</th><td>3</td><td>5.879726763590871</td><td>3.724147347464355</td></tr><tr><th>4</th><td>4</td><td>5.618966376050871</td><td>3.5355029971968577</td></tr><tr><th>5</th><td>5</td><td>9.518271688375728</td><td>3.0039117842661534</td></tr><tr><th>6</th><td>6</td><td>7.9854570574426305</td><td>6.56673919966587</td></tr><tr><th>7</th><td>7</td><td>2.663853888081078</td><td>3.464652719597885</td></tr><tr><th>8</th><td>8</td><td>8.76120018942791</td><td>7.5515628773394905</td></tr><tr><th>9</th><td>9</td><td>9.713014430245243</td><td>7.630708678875124</td></tr><tr><th>10</th><td>10</td><td>4.820990880906479</td><td>1.018489835041465</td></tr><tr><th>11</th><td>11</td><td>8.24965379207373</td><td>2.055207082570605</td></tr><tr><th>12</th><td>12</td><td>1.2036989138067145</td><td>9.543567046837762</td></tr><tr><th>13</th><td>13</td><td>4.054862612696681</td><td>3.1067540979604757</td></tr><tr><th>14</th><td>14</td><td>4.425056993675001</td><td>8.920457906310904</td></tr><tr><th>15</th><td>15</td><td>6.253777374299712</td><td>6.885931952798982</td></tr><tr><th>16</th><td>16</td><td>9.949714713368438</td><td>0.7764601946871186</td></tr><tr><th>17</th><td>17</td><td>1.4824629970283687</td><td>1.6705805163727816</td></tr><tr><th>18</th><td>18</td><td>2.729461216241831</td><td>2.5524028383469743</td></tr><tr><th>19</th><td>19</td><td>2.930561966345344</td><td>7.237024190308167</td></tr><tr><th>20</th><td>20</td><td>6.755435971055743</td><td>2.2673961318630242</td></tr><tr><th>21</th><td>21</td><td>8.44348547643497</td><td>5.872083733292859</td></tr><tr><th>22</th><td>22</td><td>1.9438741478814747</td><td>2.060160634311905</td></tr><tr><th>23</th><td>23</td><td>4.489076119771513</td><td>8.073408473539729</td></tr><tr><th>24</th><td>24</td><td>0.4824826991383113</td><td>0.566553338183724</td></tr><tr><th>25</th><td>25</td><td>1.6033682840771668</td><td>8.92673299591426</td></tr><tr><th>26</th><td>26</td><td>9.744602205824805</td><td>1.1550064657600978</td></tr><tr><th>27</th><td>27</td><td>7.6156933252471815</td><td>7.796205676532941</td></tr><tr><th>28</th><td>28</td><td>2.665397848252289</td><td>2.7855912809550465</td></tr><tr><th>29</th><td>29</td><td>1.343764133503369</td><td>6.042344697621238</td></tr><tr><th>30</th><td>30</td><td>7.941151437266689</td><td>3.1365282459536403</td></tr><tr><th>&vellip;</th><td>&vellip;</td><td>&vellip;</td><td>&vellip;</td></tr></table>"
+        "<table class=\"data-frame\"><tr><th></th><th>ind_id</th><th>x</th><th>y</th></tr><tr><th>1</th><td>1</td><td>4.461364144407183</td><td>6.663411405302777</td></tr><tr><th>2</th><td>2</td><td>6.57395384098201</td><td>1.7005146434150786</td></tr><tr><th>3</th><td>3</td><td>3.839539088884183</td><td>4.940934682471982</td></tr><tr><th>4</th><td>4</td><td>3.0528843585608834</td><td>3.2900480543548882</td></tr><tr><th>5</th><td>5</td><td>3.05470170017182</td><td>6.633956341111908</td></tr><tr><th>6</th><td>6</td><td>6.5053933951568315</td><td>4.089314035377008</td></tr><tr><th>7</th><td>7</td><td>5.720645202758798</td><td>9.790961223411529</td></tr><tr><th>8</th><td>8</td><td>9.292350401821341</td><td>0.8425429866146494</td></tr><tr><th>9</th><td>9</td><td>2.538606696816179</td><td>7.689411417003534</td></tr><tr><th>10</th><td>10</td><td>7.026589224509905</td><td>1.592202743381419</td></tr><tr><th>11</th><td>11</td><td>1.168303374119961</td><td>1.4351051701844053</td></tr><tr><th>12</th><td>12</td><td>7.7957243101407965</td><td>3.9613494807056115</td></tr><tr><th>13</th><td>13</td><td>4.404744600236674</td><td>3.816553009951127</td></tr><tr><th>14</th><td>14</td><td>1.2321670292029752</td><td>6.240485936675812</td></tr><tr><th>15</th><td>15</td><td>7.435204361422281</td><td>4.409322996285856</td></tr><tr><th>16</th><td>16</td><td>2.314288563954021</td><td>8.933048827753776</td></tr><tr><th>17</th><td>17</td><td>0.7241141165577725</td><td>5.902298030044357</td></tr><tr><th>18</th><td>18</td><td>6.9565014634363305</td><td>6.538263437783125</td></tr><tr><th>19</th><td>19</td><td>6.9281118630954275</td><td>4.651953866990246</td></tr><tr><th>20</th><td>20</td><td>2.6874257630945486</td><td>9.928874735044943</td></tr><tr><th>21</th><td>21</td><td>0.9405816682060508</td><td>1.9114698247902018</td></tr><tr><th>22</th><td>22</td><td>1.2830332606671901</td><td>8.88505464698815</td></tr><tr><th>23</th><td>23</td><td>4.400884726672986</td><td>1.715133967234037</td></tr><tr><th>24</th><td>24</td><td>0.2599515484156023</td><td>2.7705868230568687</td></tr><tr><th>25</th><td>25</td><td>3.0835321066413535</td><td>6.786720892729665</td></tr><tr><th>26</th><td>26</td><td>3.717700370011019</td><td>8.164276906566847</td></tr><tr><th>27</th><td>27</td><td>8.138662030313197</td><td>3.9478280975361146</td></tr><tr><th>28</th><td>28</td><td>2.0664585149363335</td><td>9.466651905536947</td></tr><tr><th>29</th><td>29</td><td>5.849840269086131</td><td>8.478369506783247</td></tr><tr><th>30</th><td>30</td><td>5.8508314885448325</td><td>3.6816548358422607</td></tr><tr><th>&vellip;</th><td>&vellip;</td><td>&vellip;</td><td>&vellip;</td></tr></table>"
        ],
        "metadata": {},
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
         "100x3 DataFrame\n",
-        "| Row | ind_id | x         | y       |\n",
-        "|-----|--------|-----------|---------|\n",
-        "| 1   | 1      | 1.66941   | 0.50867 |\n",
-        "| 2   | 2      | 0.253063  | 9.65633 |\n",
-        "| 3   | 3      | 5.87973   | 3.72415 |\n",
-        "| 4   | 4      | 5.61897   | 3.5355  |\n",
-        "| 5   | 5      | 9.51827   | 3.00391 |\n",
-        "| 6   | 6      | 7.98546   | 6.56674 |\n",
-        "| 7   | 7      | 2.66385   | 3.46465 |\n",
-        "| 8   | 8      | 8.7612    | 7.55156 |\n",
-        "| 9   | 9      | 9.71301   | 7.63071 |\n",
-        "| 10  | 10     | 4.82099   | 1.01849 |\n",
-        "| 11  | 11     | 8.24965   | 2.05521 |\n",
+        "| Row | ind_id | x        | y         |\n",
+        "|-----|--------|----------|-----------|\n",
+        "| 1   | 1      | 4.46136  | 6.66341   |\n",
+        "| 2   | 2      | 6.57395  | 1.70051   |\n",
+        "| 3   | 3      | 3.83954  | 4.94093   |\n",
+        "| 4   | 4      | 3.05288  | 3.29005   |\n",
+        "| 5   | 5      | 3.0547   | 6.63396   |\n",
+        "| 6   | 6      | 6.50539  | 4.08931   |\n",
+        "| 7   | 7      | 5.72065  | 9.79096   |\n",
+        "| 8   | 8      | 9.29235  | 0.842543  |\n",
+        "| 9   | 9      | 2.53861  | 7.68941   |\n",
+        "| 10  | 10     | 7.02659  | 1.5922    |\n",
+        "| 11  | 11     | 1.1683   | 1.43511   |\n",
         "\u22ee\n",
-        "| 89  | 89     | 5.60802   | 9.02492 |\n",
-        "| 90  | 90     | 4.75384   | 8.64451 |\n",
-        "| 91  | 91     | 7.60161   | 1.35246 |\n",
-        "| 92  | 92     | 3.48884   | 4.83918 |\n",
-        "| 93  | 93     | 0.0880402 | 7.79348 |\n",
-        "| 94  | 94     | 9.32822   | 3.82949 |\n",
-        "| 95  | 95     | 8.00797   | 8.64976 |\n",
-        "| 96  | 96     | 8.02438   | 8.23574 |\n",
-        "| 97  | 97     | 7.14922   | 7.00397 |\n",
-        "| 98  | 98     | 3.82431   | 3.7394  |\n",
-        "| 99  | 99     | 8.66485   | 2.325   |\n",
-        "| 100 | 100    | 6.46042   | 1.59055 |"
+        "| 89  | 89     | 1.63282  | 4.96631   |\n",
+        "| 90  | 90     | 7.69537  | 1.50657   |\n",
+        "| 91  | 91     | 8.95278  | 8.00547   |\n",
+        "| 92  | 92     | 5.30477  | 7.90005   |\n",
+        "| 93  | 93     | 7.12167  | 0.752555  |\n",
+        "| 94  | 94     | 4.28056  | 0.0469207 |\n",
+        "| 95  | 95     | 6.00683  | 0.382315  |\n",
+        "| 96  | 96     | 1.42648  | 0.201693  |\n",
+        "| 97  | 97     | 5.34801  | 7.13868   |\n",
+        "| 98  | 98     | 0.114107 | 3.76019   |\n",
+        "| 99  | 99     | 8.80985  | 8.73224   |\n",
+        "| 100 | 100    | 5.50352  | 3.73456   |"
        ]
       }
      ],
@@ -382,30 +382,30 @@
         "edb(100x3 DataFrame\n",
         "| Row | ind_id | s | i       |\n",
         "|-----|--------|---|---------|\n",
-        "| 1   | 1      | 0 | 1.5948  |\n",
-        "| 2   | 2      | 0 | 5.95601 |\n",
-        "| 3   | 3      | 0 | 1.40074 |\n",
-        "| 4   | 4      | 0 | 1.4005  |\n",
-        "| 5   | 5      | 0 | 1.64819 |\n",
-        "| 6   | 6      | 0 | 1.67478 |\n",
-        "| 7   | 7      | 0 | 1.0661  |\n",
-        "| 8   | 8      | 0 | 1.91473 |\n",
-        "| 9   | 9      | 0 | 2.10758 |\n",
-        "| 10  | 10     | 0 | 2.95661 |\n",
-        "| 11  | 11     | 0 | 1.6839  |\n",
+        "| 1   | 1      | 0 | 1.35776 |\n",
+        "| 2   | 2      | 0 | 2.21473 |\n",
+        "| 3   | 3      | 0 | 2.30978 |\n",
+        "| 4   | 4      | 0 | 2.28718 |\n",
+        "| 5   | 5      | 0 | 1.44379 |\n",
+        "| 6   | 6      | 0 | 2.12639 |\n",
+        "| 7   | 7      | 0 | 1.64834 |\n",
+        "| 8   | 8      | 0 | 2.13958 |\n",
+        "| 9   | 9      | 0 | 1.29788 |\n",
+        "| 10  | 10     | 0 | 2.21468 |\n",
+        "| 11  | 11     | 0 | 4.56845 |\n",
         "\u22ee\n",
-        "| 89  | 89     | 0 | 2.08926 |\n",
-        "| 90  | 90     | 0 | 2.08553 |\n",
-        "| 91  | 91     | 0 | 1.69156 |\n",
-        "| 92  | 92     | 0 | 1.08804 |\n",
-        "| 93  | 93     | 0 | 5.79922 |\n",
-        "| 94  | 94     | 0 | 1.47252 |\n",
-        "| 95  | 95     | 0 | 1.82439 |\n",
-        "| 96  | 96     | 0 | 1.82189 |\n",
-        "| 97  | 97     | 0 | 1.79144 |\n",
-        "| 98  | 98     | 0 | 1.00636 |\n",
-        "| 99  | 99     | 0 | 1.68293 |\n",
-        "| 100 | 100    | 0 | 1.70906 |,[1.0,1.00636,1.00892,1.00895,1.00897,1.00936,1.02273,1.0661,1.08804,1.14311  \u2026  3.69089,5.71034,5.7744,5.77938,5.79514,5.79538,5.79922,5.80618,5.95595,5.95601],\"continuous\")"
+        "| 89  | 89     | 0 | 2.73699 |\n",
+        "| 90  | 90     | 0 | 2.21107 |\n",
+        "| 91  | 91     | 0 | 1.78222 |\n",
+        "| 92  | 92     | 0 | 1.63233 |\n",
+        "| 93  | 93     | 0 | 2.25587 |\n",
+        "| 94  | 94     | 0 | 3.31125 |\n",
+        "| 95  | 95     | 0 | 2.2773  |\n",
+        "| 96  | 96     | 0 | 5.02972 |\n",
+        "| 97  | 97     | 0 | 1.55632 |\n",
+        "| 98  | 98     | 0 | 3.48752 |\n",
+        "| 99  | 99     | 0 | 1.77253 |\n",
+        "| 100 | 100    | 0 | 2.14308 |,[1.0,1.00176,1.05514,1.09502,1.12257,1.16808,1.17907,1.17908,1.19942,1.26623  \u2026  2.90639,3.31125,3.45571,3.48725,3.48752,3.4899,4.55268,4.56845,5.02139,5.02972],\"continuous\")"
        ]
       }
      ],
@@ -432,7 +432,7 @@
        "output_type": "pyout",
        "prompt_number": 4,
        "text": [
-        "ilm_loglikelihood (generic function with 1 method)"
+        "cSI_ll (generic function with 1 method)"
        ]
       }
      ],
@@ -465,7 +465,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "1282276 seconds (2882112 bytes allocated, 72.77% gc time)\n"
+        "069605312 seconds (2724452 bytes allocated, 55.01% gc time)\n"
        ]
       },
       {
@@ -473,7 +473,7 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "268.655485611737"
+        "253.27757438224475"
        ]
       }
      ],
@@ -515,7 +515,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "134.844137785 seconds (72151518068 bytes allocated, 54.00% gc time)\n",
+        "128.346691152 seconds (72151521644 bytes allocated, 53.44% gc time)\n",
         "Iterations = 1:20000\n",
         "Thinning interval = 1\n",
         "Chains = 1\n",
@@ -537,8 +537,8 @@
        "text": [
         ":\n",
         " \"\"        \"Mean\"   \"SD\"      \"Naive SE\"   \"MCSE\"         \"ESS\"\n",
-        " \"alpha\"  1.97771  0.235265  0.00166357   0.00482469  6896.08  \n",
-        " \"beta\"   5.97631  0.163894  0.0011589    0.00338473  6847.84  \n",
+        " \"alpha\"  1.98509  0.229787  0.00162484   0.00422627  7689.24  \n",
+        " \"beta\"   6.07708  0.168861  0.00119402   0.00307656  7762.09  \n",
         "\n",
         "Quantiles:\n",
         "3x6 Array{Any,2}"
@@ -550,8 +550,8 @@
        "text": [
         ":\n",
         " \"\"        \"2.5%\"   \"25.0%\"   \"50.0%\"   \"75.0%\"   \"97.5%\"\n",
-        " \"alpha\"  1.54084  1.81359   1.9747    2.1355    2.43583 \n",
-        " \"beta\"   5.65115  5.86517   5.97479   6.09115   6.29648 \n"
+        " \"alpha\"  1.55872  1.82604   1.97811   2.13324   2.44863 \n",
+        " \"beta\"   5.74282  5.96451   6.07845   6.19158   6.40326 \n"
        ]
       }
      ],
